...
        <Stack.Screen
          name="index"
          options={{
            headerRight: () => (
              <View style={{ flexDirection: 'row', gap: 16 }}>
                <IconButton
                  testID="import-export-button"
                  onPress={() => router.push('/import-export')}
                  icon={<DatabaseBackup color={Colors.icon} size={20} strokeWidth={2.25} />}
                />
                <IconButton
                  onPress={() => router.push('/task/overdue')}
                  icon={<ClockAlert color={Colors.icon} size={20} strokeWidth={2.25} />}
                />
                <IconButton
                  testID="add-task-button"
                  onPress={() => router.push('/task/add')}
                  icon={<Plus color={Colors.icon} size={22} strokeWidth={2.25} />}
                />
              </View>
            ),
          }}
...
