appId: com.kaayell.dripp
---
- launchApp:
    clearState: true
- runFlow:
    file: ../subflows/create-task-with-category.yaml
    env:
      TASK_NAME: "drip"
      CATEGORY_NAME: "bod"
- runFlow:
    file: ../subflows/export-data.yaml
    env:
      EXPECTED_COUNTS: "1 tasks, 1 categories, 0 logs, 0 notes, 0 reminders"

- launchApp:
    clearState: true
- runFlow:
    file: ../subflows/create-task-with-category.yaml
    env:
      TASK_NAME: "trash"
      CATEGORY_NAME: "home"
- runFlow: ../subflows/open-latest-export.yaml
- assertVisible: "1 tasks, 1 categories, 0 logs, 0 notes, 0 reminders"
- assertVisible: "drip"
- tapOn:
    id: "merge-button"
- assertVisible: "Added 1 task, 1 category, 0 logs, 0 notes, 0 reminders"
- tapOn:
    id: "done-button"
- assertVisible: "drip"
- assertVisible: "bod"
- assertVisible: "trash"
- assertVisible: "home"
